<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello, world!</string>
    <string name="app_name">Book Sharing</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_buy">Search and Buy</string>
    <string name="buy_search_hint">Search</string>
    <string name="title_activity_buy_book_details">Book Details</string>
    <string name="price">"Price: "</string>
    <string name="isbn">ISBN:</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="subject">Subject:</string>
    <string name="buy">Buy</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="help_msg_appt">To view messages and appointments press the correspoding icon at the homescreen.  In each of these a list of messages and appointments will show up in which you can select the desired message or appointment to gain more info.  From messages you can delete the message, create an appointment, reply, or call the sender.  From Appointments you can view a map of the meeting location, send a message to the user, cancel the appointment, or call the user.</string>
    <string name="help_sell">To sell a book press the sell icon at the homescreen.  Press the add book button and add a photo to show condition.  You may scan the barcode of the book and it will auto fill the form for you.  Select a desired price and press post.</string>
    <string name="help_buy">To buy a book press the buy icon at the homescreen and in the search bar type in the name of the desired book.  A list will pop up with all books matching that name. To get more information about the book and buy it select the desired book from the list.</string>
    <string name="construction">This Page is Under Construction</string>
    <string name="button_message">Message</string>
    <string name="buy_message_instructions">Use this form to contact the seller.</string>
    <string name="send">Send</string>
    <string name="sample_title">Programming Android</string>
    <string name="sample_price">$20.00</string>
    <string name="sample_author">Zugurd Mednieks et al.</string>
    <string name="sample_isbn">978-1-449-31664-8</string>
    <string name="sample_subject">Computer Science</string>
    <string name="sample_user">John Smith</string>
    <string name="sample_date">2013/01/01</string>
    <string name="sample_time">00:10</string>
    <string name="sample_location">Hillman Library</string>
    <string name="title_activity_buy_message">Buy Message</string>
    <string name="title_activity_send_confirmation">Confirmation</string>
    <string name="buy_message_hint">Enter your message here.</string>
    <string name="buy_message_sent">Your message has been sent. The seller will contact you if he or she wishes to arrange a transaction.</string>
    <string name="return_home">Return to Home Screen</string>
    <string name="title_activity_sell">Sell Books</string>
    <string name="add_book_button">Add Book</string>
    <string name="currently_selling">Currently Selling:</string>
    <string name="title_activity_add_book">Add a Book</string>
    <string name="isbn_hint">Enter ISBN</string>
    <string name="title_hint">Enter title</string>
    <string name="author_hint">Enter author</string>
    <string name="subject_hint">Enter subject</string>
    <string name="post">Post</string>
    <string name="title_activity_confirm_post">Confirmation</string>
    <string name="confirm_post">Your book has been posted.</string>
    <string name="edit">Edit</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="search_button">Search</string>
    <string name="add_photo">Add photo</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_help">Help</string>
    <string name="button_reply">Reply</string>
    <string name="button_delete">Delete</string>
    <string name="button_profile">Account</string>
    <string name="button_appointments">Appointments</string>
    <string name="button_messages">Messages</string>
    <string name="title_activity_home">Home</string>
    <string name="email_hint">Pitt Email</string>
    <string name="pass_hint">Password</string>
    <string name="login">Login</string>
    <string name="buy_sell">to Buy and Sell!</string>
    <string name="home_screen">Home Screen</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_profile">Profile</string>
    <string name="from">From:</string>
    <string name="open">Open</string>
    <string name="view">View</string>
    <string name="date">"Date: "</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="price_hint">Enter price</string>
    <string name="scan_button">Scan barcode</string>
    <string name="title_activity_message_detail">Message Details</string>
    <string name="send_confirmation_dialog">Your message has been sent.</string>
    <string name="confirm_post_dialog">Your book has been posted.</string>
    <string name="title_activity_appointment_details">Appointment Details</string>
    <string name="action_settings">Settings</string>
    <string name="time">"Time: "</string>
    <string name="address">"Address: "</string>
    <string name="appointment_message">Message:</string>
    <string name="sample_address">123 Main St., Pittsburgh, PA</string>
    <string name="sample_appointment_message">Great, let\'s meet at the Starbucks on Main St. at 10 tomorrow morning.</string>
    <string name="view_map">View map</string>
    <string name="cancel_appointment">Cancel</string>
    <string name="confirm_cancel_appointment_dialog">Cancel appointment?</string>
    <string name="confirm_delete_message_dialog">Delete message?</string>
    <string name="yes">Yes</string>
    <string name="never_mind">Never mind</string>
    <string name="appointment_canceled_dialog">Appointment canceled.</string>
    <string name="message_deleted_dialog">Message deleted.</string>
    <string name="title_activity_message_reply">Reply Message</string>
    <string name="reply_hint">Enter your message here.</string>
    <string name="call_user">Call user</string>
    <string name="no_connection_dialog">You must be connected to the Internet to use the barcode scanner.</string>
    <string name="ok">OK</string>
    <string name="scan_error_dialog">Sorry, an error has occurred. Please try again.</string>
    <string name="wrong_format_dialog">Error: Please scan the ISBN barcode found on the book\'s cover or jacket.</string>
    <string name="create_appointment_button">Create appointment</string>
    <string name="title_activity_create_appointment">CreateAppointmentActivity</string>
    <string name="book">"Book: "</string>
    <string name="create_appointment_address_hint">Enter address</string>
    <string name="create_appointment_book_hint">Enter book title</string>
    <string name="create_appointment_price_hint">Enter price</string>
    <string name="create_appointment_confirmation_dialog">Appointment created.</string>
    <string name="title_activity_appointment_map">AppointmentMapActivity</string>

</resources>